--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@ html, body {
     font-family: sans-serif;
     height: 100%;
 }
+body {
+	background-color: #f1f6f6;
+}
 
 .Encabezado {
     align-items: baseline;
@@ -44,6 +47,7 @@ html, body {
 .Libros__electronicos {
     align-items: baseline;
     color: #bdbdbd;
+    font-family: sans-serif;
     font-size: 4rem;
     padding: 9rem 1rem 1rem 1rem;
 }
@@ -89,23 +93,51 @@ html, body {
     padding: 2rem 3rem 4rem 10rem;
 }
 
-.Contenido {
-    background: #f1f6f6;
-    display: flex;
-    justify-content: space-between;
-    overflow: auto;
-}
+
 
 .Paquetes .Paquetes__titulo {
     color: #e1e6e6;
     font-family: Montserrat;
     font-size: 4rem;
+    padding: 14rem 0rem 0rem 10rem;
     text-transform: uppercase;
 }
 
 .Paquetes {
     background: #ffffff;
+    border-radius: 2rem;
+    box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.5);
+	justify-content: space-between;
+	margin-right: 5rem;
+	margin-bottom: 0rem;
+	margin-left: 5rem;
+	margin-top: 10rem;
+}
 
+li{
+	color: #747e7e;
+	font-size: 4rem;
+	padding: 5rem 16rem 5rem 0rem;
+}
+
+h2 {
+	color: #00a09b;
+	font-size: 4rem;
+	font-family: Montserrat;
+	font-weight: bold;
+	text-transform: uppercase;	
+	padding: 3rem 4rem 3rem 10rem;
+}
+
+.Agregar_paquete__imagen {
+    background: url('images/agregar_paquete.png') no-repeat;
+    justify-content: center;
+    padding: 10rem 10rem 10rem 50rem;
+}
+
+.Libros {
+    display: flex;
+    flex-direction: row;
 }
 
 .book {
